# deterministic-wave-engine

./: .gitignore  .~lock.Ajuste nos gráficos.odt#  Cargo.toml  README.md  hqpu_readings.csv  plot_hqpu.py  plotar_bancada.py  result_A_newton_gpu.csv  result_B_sand_gpu.csv  result_C_comb_gpu.csv  result_D_feynman_gpu.csv  result_E_colapso.csv  result_airy_vs_gauss.csv  result_bell_test.csv
analytics/: epr_sweep_results.csv  generate_gaya_csv.py  hqpu_readings.csv  jupiter_dr3_anomalies.csv  jupiter_dr3_anomalies_equatorial.csv  output.csv  plot_airy_dispersion.py  plot_bell_chsh.py  plot_colapso.py  plot_dgm_experiment3.py  plot_dwe_experiments.py  plot_epr.py  plot_hong.py  plot_hqpu_qnd.py  plot_pfleegor_mandel.py  plot_quadrants.py  qiskit_local_epr_results.csv  qiskit_real_epr_ibm_marrakesh.csv  qiskit_real_hardware.py  qiskit_simulation.py  result_A_newton_gpu.csv  result_A_no_memory.csv  result_B_pfleegor_mandel.csv  result_B_sand_gpu.csv  result_C_comb_gpu.csv  result_C_magnus_spin.csv  result_D_feynman_gpu.csv  result_D_feynman_gpuold.csv  result_D_single_laser.csv  result_E_colapso.csv  result_E_colapsoold.csv  result_airy_vs_gauss.csv  result_bell_test.csv  result_exp3_tunneling.csv  result_exp4_zeeman.csv  result_exp5_anderson.csv  venus_dr3_anomalies.csv  venus_dr3_anomalies_equatorial.csv
images/: hqpu_readings.csv  result_A_newton.csv  result_B_sand.csv  result_C_comb.csv  result_D_feynman.csv
src/: fenda_shader.wgsl  hqpu.rs  hqpu_shader.wgsl  main.rs
