[package]
name = "deterministic_wave_engine"
version = "0.1.0"
edition = "2021"


[dependencies]
wgpu = "0.19"
bytemuck = { version = "1.15", features = ["derive"] }
pollster = "0.3"
flume = "0.11"
rand = { version = "0.8", features = ["std", "std_rng"] }
futures-intrusive = "0.5"


[[bin]]
name = "deterministic_wave_engine"
path = "src/bin/main.rs"

[[bin]]
name = "hqpu"
path = "src/bin/hqpu.rs"


